--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{%extends'rango/base.html'%}
 
 <html>
 
@@ -7,13 +8,14 @@
 </head>
 
 <body>
+    <a href="/rango/">Index</a><br />
     <div>
         {% if category %}
         <h1>{{ category.name }}</h1>
         {% if pages %}
         <ul>
             {% for page in pages %}
-            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            <li><a href='{{ page.url }}'> {{ page.title }} </a></li>
             {% endfor %}
         </ul>
         {% else %}
@@ -23,6 +25,7 @@
         The specified category does not exist.
         {% endif %}
     </div>
+    <a href="./add_page/">Create a new Page</a>
 </body>
 
 </html>
