--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-{% load staticfiles %}
+{% extends 'rango/base.html' %} 
 
 <html>
 
-<head>
-    <title>Rango</title>
-</head>
+{% block title_block %}Rango{% endblock %}
 
-<body>
+{%block body_block%}
     <h1>Rango says...</h1>
     <div>
         hey there partner! <br />
@@ -15,6 +13,7 @@
     </div>
     <div>
         {% if categories %}
+        <h2>Most Liked Categories</h2>
         <ul>
             {% for category in categories %}
             <li>
@@ -27,9 +26,22 @@
         {% endif %}
     </div>
     <div>
-        <a href="/rango/about/">About</a><br />
+        {% if categories and pages %}
+        <h2>Most Viewed Pages</h2>
+        <ul>
+            {% for page in pages %}
+            <li>
+                <a href="{{ page.url }}">{{ page.title }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+        {% else %}
+        <strong>There are no pages present.</strong>
+        {% endif %}
+    </div>
+    <div>
         <img src="/static/images/rango.jpg" alt="Picture of Rango" />
     </div>
-</body>
+    {% endblock%}
 
 </html>
