--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -17,6 +17,8 @@
         <a href="/rango/">Index</a><br />
         <img src="/static/images/rango.jpg" alt="Picture of Rango" />
         <img src="/media/cat.jpg" alt="Picture of a Cat." />
+        <br>
+        Visits: {{Visits}}
     </div>
 </body>
 
