--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-{%extends'rango/base.html'%}
 <html>
     <head>
         <title>Rango</title>
     </head>
-    {% block body_block %}
+    <body>
         <h1></h1>
         <div>
             <form id="category_form" method="post">
@@ -20,5 +19,5 @@
                 <input type="submit" name="submit" value="Create Category" />
             </form>
         </div>
-        {% endblock %}
+    </body>
 </html>
