--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-{% extends 'rango/base.html' %} 
+{% load staticfiles %}
 
 <html>
 
-{% block title_block %}Rango{% endblock %}
+<head>
+    <title>Rango</title>
+</head>
 
-{%block body_block%}
-    <h1>Rango says...</h1>
-    <div>
-        hey there partner! <br />
+<body>
+    <h1>Rango says {% if user.is_authenticated %} howdy {{user.username}} {% else %} hey there partner!{% endif %}</h1> <br />
         <strong>{{ boldmessage }}</strong>
     </div>
     <div>
@@ -40,8 +40,11 @@
         {% endif %}
     </div>
     <div>
-        <img src="/static/images/rango.jpg" alt="Picture of Rango" />
+        <a href="/rango/add_category/">Add a New Category</a><br />
+        <a href="/rango/about/">About</a><br />
+        <img src="/static/images/rango.jpg" alt="Picture of Rango" /><br>
+        Visits: {{Visits}}
     </div>
-    {% endblock%}
+</body>
 
 </html>
