--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 <html>
     <head>
         <title>Rango</title>
     </head>
-    <body>
+    {% block body_block %}
         <h1></h1>
         <div>
-            <form id="category_form" method="post">
+            <form id="category_form" method="post" action="/rango/django/add_page/">
                 {% csrf_token%}
                 {% for hidden in form.hidden_fields %}
                     {{hidden}}
@@ -19,5 +19,4 @@
                 <input type="submit" name="submit" value="Create Page" />
             </form>
         </div>
-    </body>
-</html>
+        {% endblock %}
