--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -44,6 +44,6 @@
         <a href="/rango/about/">About</a><br />
         <img src="/static/images/rango.jpg" alt="Picture of Rango" /><br>
     </div>
-</body>
+{% endblock %}
 
 </html>
